--- a/RepositoryCore/RepositoryCore.csproj
+++ b/RepositoryCore/RepositoryCore.csproj
@@ -51,6 +51,11 @@
     <Compile Include="Abstraction\Products\IProductRepository.cs" />
     <Compile Include="Context\ApplicationDbContext.cs" />
     <Compile Include="Implementation\Products\ProductRepository.cs" />
+    <Compile Include="Migrations\201903282005489_Initial.cs" />
+    <Compile Include="Migrations\201903282005489_Initial.Designer.cs">
+      <DependentUpon>201903282005489_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitOfWork\Abstraction\IUnitOfWork.cs" />
     <Compile Include="UnitOfWork\Implementation\UnitOfWork.cs" />
@@ -64,6 +69,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201903282005489_Initial.resx">
+      <DependentUpon>201903282005489_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
