--- a/ServiceCore/ServiceCore.csproj
+++ b/ServiceCore/ServiceCore.csproj
@@ -41,7 +41,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstraction\Products\IProductService.cs" />
+    <Compile Include="Implementation\Products\ProductService.cs" />
+    <Compile Include="Messages\Abstraction\BaseResponse.cs" />
+    <Compile Include="Messages\Products\ProductListResponse.cs" />
+    <Compile Include="Messages\Products\ProductResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DomainCore\DomainCore.csproj">
+      <Project>{79299370-5B13-41C0-AB83-34D7C3851537}</Project>
+      <Name>DomainCore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RepositoryCore\RepositoryCore.csproj">
+      <Project>{AC4DE79D-7B10-47F8-94C8-303914D87744}</Project>
+      <Name>RepositoryCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
